--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -20,17 +20,17 @@ page {
   padding: 20rpx;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   justify-content: space-between;
   padding-bottom: 55rpx;
   box-sizing: border-box;
 }
 
-.userinfo {
+/* .userinfo {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
+} */
 
 .userinfo-avatar {
   width: 256rpx;
@@ -160,8 +160,9 @@ page {
 }
 
 audio {
-  margin: 6rpx;
+  margin: 6rpx 6%;
   width: 95%;
+  text-align: left;
 }
 
 textarea {
